--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>homeWorks | main </title>
+    <link rel="icon" href="img/favicon.png" type="image/png" sizes="64x64">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/adaptive.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,7 +33,8 @@
                             <label class="input__label"> Your username
                                 <input class="input__item" type="text" id="user-name">
                                 <div class="signup__error empty">Write your username</div>
-                                <div class="signup__error mistake">Use only letters, numbers, underscores and dashes</div>
+                                <div class="signup__error mistake">Use only letters, numbers, underscores and dashes
+                                </div>
                             </label>
                         </div>
                         <div class="input">
@@ -86,8 +88,9 @@
             <button id="popup-ok-button">ОК</button>
         </div>
     </div>
-    <div class="container container-second">
-        <div class="login">
+
+    <div class="login">
+        <div class="container">
             <div class="logo">
                 <span>home<span class="red">W</span>orks</span>
             </div>
@@ -117,26 +120,23 @@
                     <p class="form__link to-registration"><a href="#">Registration</a></p>
                 </form>
             </section>
-            <div class="login__image">
-                <img src="img/image.png" alt="">
-            </div>
         </div>
     </div>
-    <div class="container container-third">
-        <div class="user-account">
-            <div class="logo account">
-                <span>home<span class="red">W</span>orks</span>
-            </div>
-            <section class="account__content">
-                <h1 class="account__header">Welcome, <span id="fullnameSpan"></span></h1>
-                <div class="form__action">
-                    <button id="exit" type="submit">Exit</button>
-                </div>
-            </section>
-            <div class="account__image">
-                <img src="img/image.png" alt="">
-            </div>
+</div>
+<div class="container container-third">
+    <div class="user-account">
+        <div class="logo account">
+            <span>home<span class="red">W</span>orks</span>
         </div>
+        <section class="account__content">
+            <h1 class="account__header">Welcome, <span id="fullnameSpan"></span></h1>
+            <div class="form__action">
+                <button id="exit" type="submit">Exit</button>
+            </div>
+        </section>
+        <!--<div class="account__image">
+            <img src="img/image.png" alt="">
+        </div>-->
     </div>
 </div>
 
